[project]
name = "initialsproj1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.10",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.29",
    "langchain-openai>=1.1.7",
]
