[project]
name = "initialsproj1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.3.10",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.2.0",
    "streamlit>=1.35.0",
]
